# binary_program_analysis

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
readbin/src/: elf.rs  main.rs  pe.rs
readbin/src/elf/: elf_header.rs  program_header.rs  section_header.rs
readbin/src/pe/: msdos_header.rs  nt_headers.rs  section_header.rs
report/include/: myminted.tex
report/src/: titlepage.tex  week1.tex  week2.tex
src/: elf.rs  loader.rs  main.rs  pe.rs  visualize.rs
src/elf/: elf_header.rs
src/loader/: elf.rs  elf_test.rs  function.rs  pe.rs  pe_test.rs
src/loader/elf/: elf_32.rs  elf_64.rs  elf_header.rs  program_header.rs  section_header.rs
src/loader/elf/elf_32/: elf_header.rs  program_header.rs  section_header.rs
src/loader/elf/elf_64/: elf_header.rs  program_header.rs  section_header.rs
src/loader/pe/: msdos_header.rs  nt_headers.rs  section_header.rs
src/pe/: section_header.rs
src/visualize/: hex_dump.rs
test/: Elf32  Elf64_diff  build_bin.md
