[package]
name = "unlibit" # anagram of binutil or builtin
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
iced-x86 = "1.17.0"
clap = {version = "3.0.5", features=["cargo"]}
plotters = "0.3.4"
colored = "2.0.0"
